# benzene

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  cleanup.bat  conanfile.py  install.bat  vcpkg.json
src/: main.cpp
src/lib/calc/: calc.cpp  calc.hpp
src/lib/renderer/: renderer.cpp  renderer.hpp
